<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="亲民律所管理系统"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:padding="10dp"
        android:background="@color/lightgrey"/>
    <com.bigkoo.convenientbanner.ConvenientBanner
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/convenientBanner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:canLoop="true"><!--是否循环-->
    </com.bigkoo.convenientbanner.ConvenientBanner>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/judicial_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:text="@string/judicial_address_book" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="@color/black" />

        <TextView
            android:id="@+id/calendar_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:text="@string/calendar" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="@color/black" />

        <TextView
            android:id="@+id/conflict_of_interest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:text="@string/conflict_of_interest" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="@color/black" />

        <TextView
            android:id="@+id/addcase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:text="@string/addcase" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/minecase"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minecase"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />

        <TextView
            android:id="@+id/work_log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:text="@string/work_log" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />
        <TextView
            android:id="@+id/court_trial"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/court_trial"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />
        <TextView
            android:id="@+id/public_security"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/public_security"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/judicial_case"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/judicial_case"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />
        <TextView
            android:id="@+id/examine_and_approve"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/examine_and_approve"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />
        <TextView
            android:id="@+id/income_and_expenses"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/income_and_expenses"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />

        <TextView
            android:id="@+id/collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:text="@string/collection" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/customer_management"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_management"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />
        <TextView
            android:id="@+id/sign_in"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:drawableTop="@mipmap/news_blue"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.3" />

</LinearLayout>
