<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judicial_address_book"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:padding="10dp"
        android:background="@color/lightgrey"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.3"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:padding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:drawableLeft="@mipmap/search"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/input_box_white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judicial_address_book"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:drawableLeft="@mipmap/news"
            android:drawablePadding="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arraw"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black"
        android:alpha="0.3"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/law_journal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/law_journal"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:drawableLeft="@mipmap/news"
            android:drawablePadding="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arraw"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black"
        android:alpha="0.3"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/customer_address">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_address_book"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:drawableLeft="@mipmap/news"
            android:drawablePadding="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arraw"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/black"
        android:alpha="0.3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:padding="15dp"
        android:textColor="@color/blue"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/black"
        android:alpha="0.3"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_judicial_address_book"/>
</LinearLayout>
